--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     border-radius: 25px;
     padding: 10px;
     width: 60%;
-    font-size: 18px;
+    font-size: 20px;
 }
 .heading1{
     text-align: center;
@@ -46,4 +46,12 @@
     text-align: center;
     font-size: 26px;
     color: red;
+}
+@media screen and (max-width: 576px){
+    .main{
+        font-size: 2rem;
+    }
+    .word1{
+        font-size: 24px;
+    }
 }
